@@ -1,9 +1,14 @@
 cowdancer (0.38) UNRELEASED; urgency=low
 
+ [ Junichi Uekawa ]
   * document that i386/amd64 cross-arch building is not supported using
     cowbuilder.
 
- -- Junichi Uekawa <dancer@debian.org>  Wed, 11 Jul 2007 07:13:15 +0900
+ [ Jan-Marek Glogowski ] 
+  * Don't clean the environment when invoking dumpconfig 
+  * Better error handling when loading config
+
+ -- Junichi Uekawa <dancer@debian.org>  Tue, 21 Aug 2007 08:18:57 +0900
 
 cowdancer (0.37) unstable; urgency=low
 
